# neko-auth

./: .gitignore  Cargo.toml  README.md  wrangler.toml
.github/workflows/: deploy.yml  preview.yml
src/: api.rs  app.rs  config.rs  do_protocol.rs  lib.rs  oidc_flow.rs  request_context.rs  security.rs  types.rs
src/durable_objects/: mod.rs  oidc_state.rs  user_session.rs
src/handlers/: mod.rs  oidc.rs  preferences.rs  session.rs  sessions.rs  support.rs
src/logic/: authorize.rs
src/oidc/: authorize.rs  backchannel_logout.rs  callback.rs  mod.rs  test_support.rs  types.rs
src/storage/: sql.rs
