[package]
name = "neko-auth"
version = "0.1.0"
edition = "2024"
authors = ["Asen"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["http", "axum"] }
worker-macros = { version = "0.7", features = ["http"] }
axum = { version = "0.8", default-features = false, features = ["query", "json", "form"] }
tower-service = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# formatting + parsing 支持时间戳的序列化/反序列化，serde-human-readable 提供 rfc3339 模块
time = { version = "0.3", features = ["formatting", "parsing", "serde-human-readable"] }
