[package]
name = "neko-auth"
version = "0.1.0"
edition = "2024"
authors = ["Asen"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["http", "axum"] }
worker-macros = { version = "0.7", features = ["http"] }
axum = { version = "0.8", default-features = false, features = ["query", "json", "form"] }
tower-service = "0.3.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# formatting + parsing 支持时间戳的序列化/反序列化，serde-human-readable 提供 rfc3339 模块
time = { version = "0.3", features = ["formatting", "parsing", "serde-human-readable"] }
openidconnect = { version = "4", default-features = false }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto"] }
sea-query = { version = "0.32", default-features = false, features = ["backend-sqlite", "derive"] }
base64 = "0.22"
sha2 = "0.10"
url = "2"
serde_urlencoded = "0.7"
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3", features = ["Crypto", "WorkerGlobalScope"] }
